# file-generation-issue

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/src/: test.cpp
cmake/: dependencies.cmake
fbs/: testapi.fbs
